; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-audio-encoders.c_enc_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-audio-encoders.c_enc_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enc_encoder = type { i32, i64, i64, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @enc_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enc_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.enc_encoder*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.enc_encoder*
  store %struct.enc_encoder* %5, %struct.enc_encoder** %3, align 8
  %6 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %7 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %6, i32 0, i32 3
  %8 = load i64*, i64** %7, align 8
  %9 = getelementptr inbounds i64, i64* %8, i64 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %14 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %13, i32 0, i32 3
  %15 = load i64*, i64** %14, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 0
  %17 = call i32 @av_freep(i64* %16)
  br label %18

18:                                               ; preds = %12, %1
  %19 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %20 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %18
  %24 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %25 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @avcodec_close(i64 %26)
  br label %28

28:                                               ; preds = %23, %18
  %29 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %30 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %28
  %34 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %35 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %34, i32 0, i32 1
  %36 = call i32 @av_frame_free(i64* %35)
  br label %37

37:                                               ; preds = %33, %28
  %38 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %39 = getelementptr inbounds %struct.enc_encoder, %struct.enc_encoder* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @da_free(i32 %40)
  %42 = load %struct.enc_encoder*, %struct.enc_encoder** %3, align 8
  %43 = call i32 @bfree(%struct.enc_encoder* %42)
  ret void
}

declare dso_local i32 @av_freep(i64*) #1

declare dso_local i32 @avcodec_close(i64) #1

declare dso_local i32 @av_frame_free(i64*) #1

declare dso_local i32 @da_free(i32) #1

declare dso_local i32 @bfree(%struct.enc_encoder*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
